# sec-edgar.py

./: README.md  setup.cfg
src/sec-edgar-py/: sec-edgar.py
src/sec_edgar_py/: __init__.py  sec_edgar.py
