[metadata]
name = sec-edgar-py-robin-weaver
version = 0.0.1
author = Robin Weaver
author_email = robinweaver2001@gmail.com
description = A basic (unofficial) Python API wrapper for the SECs EDGAR system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robin-weaver/sec-edgar.py
project_urls =
    Bug Tracker = https://github.com/robin-weaver/sec-edgar.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src